Version updated to 3.2.4 Compiled with Java 11. New interface Renetrant.